# oxv2

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.complex/issues/: 4UYg.md  5H3N.md  5WhW.md  7rW7.md  7vxA.md  9Fa3.md  AUC1.md  QLrT.md  UQQ3.md  UWfw.md  WCtr.md  XzQW.md  YfVz.md  citW.md  csQA.md  eIvH.md  fFGG.md  fzWD.md  iEqd.md  jVtw.md  q2dh.md  qB5P.md  qq15.md  sKFs.md  shtq.md  tXwK.comments.json  tXwK.md  tvJE.md  yQ4D.md  yrKk.md  ys1X.md
.complex/nodes/: 2BJy.json  4UYg.json  4iXz.json  5H3N.json  5WhW.json  7rW7.json  7vxA.json  9Fa3.json  AOP7.json  AUC1.json  CTxQ.json  G53H.json  I2iK.json  QLrT.json  UQQ3.json  UWfw.json  WCtr.json  WiU6.json  XzQW.json  YfVz.json  citW.json  csQA.json  eIvH.json  fFGG.json  fP5D.json  fzWD.json  iEqd.json  jVtw.json  kHzy.json  mBGe.json  q2dh.json  qB5P.json  qq15.json  rR2n.json  risD.json  sKFs.json  shtq.json  tXwK.json  tZIG.json  tvJE.json  (+6 more)
.github/workflows/: pages.yml
defaults/: config.toml
defaults/personas/: consultant.md
defaults/personas/inspired/: reviewer.md  software-engineer.md  tech-lead.md
defaults/runtimes/: claude.toml  codex.toml  shell.toml
defaults/workflows/: code-task.toml  consultation.toml  cx-surface.toml  interactive.toml  triggers.toml
docs/: api.md  design.md  event-sources-design.md  git-integration.md  protocols.md  storage.md  vm-layout.md  workflows-design.md
docs/prd/: README.md  artifacts.md  cx.md  ecosystem.md  event-sources.md  events.md  execution.md  metrics.md  ox-ctl.md  platform.md  runners.md  runtimes.md  secrets.md  self-improvement.md  skills.md  workflows.md
ox-core/: Cargo.toml
ox-core/src/: client.rs  config.rs  events.rs  interpolation.rs  lib.rs  persona.rs  runtime.rs  types.rs  workflow.rs
ox-ctl/: Cargo.toml
ox-ctl/src/: main.rs  output.rs  up.rs
ox-cx-watcher/: Cargo.toml
ox-cx-watcher/src/: client.rs  cx.rs  lib.rs  main.rs  mapping.rs
ox-herder/: Cargo.toml
ox-herder/src/: herder.rs  main.rs
ox-rt/: Cargo.toml
ox-rt/src/: main.rs
ox-runner/: Cargo.toml
ox-runner/src/: main.rs  proxy.rs  pty.rs  runner.rs  scan.rs  socket.rs
ox-server/: Cargo.toml
ox-server/src/: api.rs  artifacts.rs  cx.rs  db.rs  events.rs  git.rs  main.rs  merge.rs  pool.rs  projections.rs  pty_relay.rs  sse.rs  state.rs
site/: index.html  style.css
