[workspace]
resolver = "2"
members = [
    "ox-core",
    "ox-server",
    "ox-herder",
    "ox-runner",
    "ox-ctl",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Shared
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"

# Config
toml = "0.8"
indexmap = { version = "2", features = ["serde"] }

# HTTP
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.12", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Git
git2 = "0.20"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Streaming
async-stream = "0.3"
futures-util = "0.3"
reqwest-eventsource = "0.6"
eventsource-stream = "0.2"

# HTTP proxy
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# ox-core
ox-core = { path = "ox-core" }
