[workspace]
resolver = "2"
members = [
    "ox-core",
    "ox-server",
    "ox-herder",
    "ox-runner",
    "ox-ctl",
    "ox-cx-watcher",
    "ox-rt",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Shared
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"

# Config
toml = "0.8"
arc-swap = "1"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
regex = "1"

# HTTP
axum = { version = "0.8", features = ["macros", "ws"] }
reqwest = { version = "0.12", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Git
git2 = "0.20"

# CLI
clap = { version = "4", features = ["derive", "env"] }
base64 = "0.22"
include_dir = "0.7"

# Streaming
async-stream = "0.3"
futures-util = "0.3"
reqwest-eventsource = "0.6"
eventsource-stream = "0.2"

# HTTP proxy
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# ox-core
# WebSocket
tokio-tungstenite = "0.28"

# ox-core
ox-core = { path = "ox-core" }
