[package]
name = "ox-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
include_dir = { workspace = true }
