[package]
name = "ox-ctl"
version.workspace = true
edition.workspace = true

[dependencies]
ox-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
chrono = { workspace = true }
libc = "0.2"
