[package]
name = "ox-cx-watcher"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ox-cx-watcher"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
ox-core = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
tower = { workspace = true }
